--- a/index.html
+++ b/index.html
@@ -304,48 +304,99 @@
 
     <div id="thirdpage">
         <h1 id="teamh1">OUR TEAM</h1>
-            <!-- YASYA STAFF COORDINATORS -->
-            <div id="yasyastaff" class="titlehead">
-                <h1>YASYA STAFF COORDINATORS</h1>
-                <div class="card-collection">
-                    <div class="card">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
-                    </div>
-                </div>
+        <div id="carousel">
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+            </div>
+            <div class="carousel__track">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
+                <img src="assets/teamc.png" alt="team carousel image">
             </div>
 
-            <!-- YUKTHI STAFF COORDINATORS -->
-            <div id="yukthistaff" class="titlehead">
-                <h1>YUKTHI STAFF COORDINATORS</h1>
-                <div class="card-collection">
-                    <div class="card glow">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
+        </div>
+        <!-- YASYA STAFF COORDINATORS -->
+        <div id="yasyastaff" class="titlehead">
+            <h1>YASYA STAFF COORDINATORS</h1>
+            <div class="card-collection">
+                <div class="card">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
                     </div>
-                    <div class="card glow">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
+                </div>
+                <div class="card">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
                     </div>
                 </div>
             </div>
-        
+        </div>
+
+        <!-- YUKTHI STAFF COORDINATORS -->
+        <div id="yukthistaff" class="titlehead">
+            <h1>YUKTHI STAFF COORDINATORS</h1>
+            <div class="card-collection">
+                <div class="card glow">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
+                    </div>
+                </div>
+                <div class="card glow">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- STUDENT COORDINATORS -->
         <div class="studentcoordinators">
             <h1 class="titlehead">STUDENT COORDINATORS</h1>
@@ -381,14 +432,14 @@
             </div>
         </div>
         <div style="display: flex;justify-content: center;">
-        <div class="card">
+            <div class="card">
                 <img src="path/to/image.jpg" alt="img" class="cardimg">
                 <div class="container">
                     <h4><b>Sumesh PP</b></h4>
-                <p>Architect</p>
+                    <p>Architect</p>
+                </div>
             </div>
-        </div>
-        <div class="card">
+            <div class="card">
                 <img src="path/to/image.jpg" alt="img" class="cardimg">
                 <div class="container">
                     <h4><b>Sumesh PP</b></h4>
@@ -698,26 +749,26 @@
             </div>
         </div>
 
-            <!-- PARTNER ENGAGEMENT -->
-            <div id="partnerengagement" class="titlehead">
-                <h1>PARTNER ENGAGEMENT</h1>
-                <div class="card-collection">
-                    <div class="card">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
+        <!-- PARTNER ENGAGEMENT -->
+        <div id="partnerengagement" class="titlehead">
+            <h1>PARTNER ENGAGEMENT</h1>
+            <div class="card-collection">
+                <div class="card">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
                     </div>
-                    <div class="card">
-                        <img src="path/to/image.jpg" alt="img" class="cardimg">
-                        <div class="container">
-                            <h4><b>Sumesh PP</b></h4>
-                            <p>Architect</p>
-                        </div>
+                </div>
+                <div class="card">
+                    <img src="path/to/image.jpg" alt="img" class="cardimg">
+                    <div class="container">
+                        <h4><b>Sumesh PP</b></h4>
+                        <p>Architect</p>
                     </div>
                 </div>
             </div>
+        </div>
     </div>
     <!-- Footer Start -->
 
